# rust_sync_force

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/: create.rs  delete.rs  deletes.rs  describe.rs  describe_global.rs  destroy.rs  find.rs  insert.rs  inserts.rs  login.rs  query.rs  search.rs  stream.rs  update.rs  updates.rs  upsert.rs  upserts.rs  versions.rs
src/: client.rs  errors.rs  lib.rs  response.rs
src/stream/: client.rs  mod.rs  response.rs
tests/: common.rs  integration_test.rs
