[package]
name = "rust_sync_force"
version = "0.1.0"
license = "MIT"
description = "Salesforce Sync REST API Client"
documentation = "https://docs.rs/rust_sync_force"
homepage = "https://github.com/0cv/rust_sync_force"
repository = "https://github.com/0cv/rust_sync_force"
readme = "README.md"
keywords = ["Salesforce", "API", "Rust"]
categories = ["web-programming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror ={ version = "1" }
ureq = { version = "2.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
regex = "1.5"

[dev-dependencies]

cargo-license = "0.5.1"
mockito = "0.31.1"
env_logger = "0.10.0"
anyhow = "1.0.32"
