[package]
name = "rust_sync_force"
version = "0.2.1"
license = "MIT"
description = "Salesforce Sync REST API Client"
documentation = "https://docs.rs/rust_sync_force"
homepage = "https://github.com/0cv/rust_sync_force"
repository = "https://github.com/0cv/rust_sync_force"
readme = "README.md"
keywords = ["Salesforce", "API", "Rust"]
categories = ["web-programming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror ={ version = "1" }
ureq = { version = "2.6", features = ["json"] }
regex = "1.5"
serde = { version = "1.0.114", features = ["derive"] }

[dev-dependencies]
cargo-license = "0.5.1"
anyhow = "1.0.32"
env_logger = "0.10.0"
mockito = "0.32"
serde_json = "1.0.57"
